--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+networkmanager-qt6 (6.0.0-0deepin2) unstable; urgency=medium
+
+  * Add flags of wifi6
+
+ -- caixiangrong <caixiangrong@uniontech.com>  Wed, 30 Apr 2025 16:28:36 +0800
+
 networkmanager-qt6 (6.0.0-0deepin1) unstable; urgency=medium
 
   * Addressing the issue of delayed network updates
